updated code to consider relative href urls

--- a/.github/workflows/japanesecanadianartists.yml
+++ b/.github/workflows/japanesecanadianartists.yml
@@ -23,8 +23,7 @@ jobs:
           https://japanesecanadianartists.com/artist/ \
           "div.entry-thumbnail a" \
           output/japanesecanadianartists.jsonld \
-          false \
-          href
+          false 
 
     - name: Commit and Push Changes
       run: |
