updated code to consider relative href urls

--- a/.github/workflows/levivier-events.yml
+++ b/.github/workflows/levivier-events.yml
@@ -23,7 +23,7 @@ jobs:
           https://levivier.ca/fr \
           "div.cont-even a" \
           output/levivier-events.jsonld \
-          true \
+          true 
 
     - name: Commit and Push Changes
       run: |
