--- a/.github/workflows/fetch-and-push-to-artsdata.yml
+++ b/.github/workflows/fetch-and-push-to-artsdata.yml
@@ -32,6 +32,9 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
+      with: 
+        repository: culturecreates/artsdata-orion
+        ref: main
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
