--- a/.github/workflows/capitoltheatre-events.yml
+++ b/.github/workflows/capitoltheatre-events.yml
@@ -38,7 +38,9 @@ jobs:
 
     - name: Get commit hash
       id: get_commit_hash
-      run: echo "::set-output name=commit-hash::$(git rev-parse HEAD)"
+      run: echo "commit-hash = $(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+      
+      
 
   artsdata-push:
     runs-on: ubuntu-latest
