--- a/.github/workflows/capitoltheatre-events.yml
+++ b/.github/workflows/capitoltheatre-events.yml
@@ -38,7 +38,9 @@ jobs:
 
     - name: Get commit hash
       id: get_commit_hash
-      run: echo "commit-hash = $(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+      run: |
+        commit_hash=$(git rev-parse HEAD)
+        echo "commit-hash=$commit_hash" >> $GITHUB_OUTPUT
       
       
 
