Updated workflows to use artsdata-pipeline-action@v1.1.0

--- a/.github/workflows/levivier-events.yml
+++ b/.github/workflows/levivier-events.yml
@@ -49,11 +49,8 @@ jobs:
     needs: fetch-and-commit-data
     steps:
       - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v1.0.0
+        uses: culturecreates/artsdata-pipeline-action@v1.1.0
         with:
-          artifact_name: levivier-ca
-          page_url: https://levivier.ca/fr
-          publisher_uri: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          download_uri: https://raw.githubusercontent.com/culturecreates/artsdata-orion/${{ needs.fetch-and-commit-data.outputs.commit-hash }}/output/levivier-events.jsonld
-          download_file: levivier-events.jsonld
-          group: artsdata-orion
+          artifact: levivier-ca
+          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
+          downloadUrl: https://raw.githubusercontent.com/culturecreates/artsdata-orion/${{ needs.fetch-and-commit-data.outputs.commit-hash }}/output/levivier-events.jsonld
