Updated blank node sparql to include domain name

--- a/.github/workflows/levivier-events.yml
+++ b/.github/workflows/levivier-events.yml
@@ -25,8 +25,7 @@ jobs:
           https://levivier.ca/fr \
           "div.cont-even a" \
           output/levivier-events.jsonld \
-          false \
-          https://levivier.ca
+          false
 
     - name: Commit and Push Changes
       run: |
