--- a/.github/workflows/capitoltheatre-events.yml
+++ b/.github/workflows/capitoltheatre-events.yml
@@ -3,7 +3,7 @@ name: Fetch Capitol Theatre Events
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 1 */6 *'
+    - cron: '0 0 1 * *'
       
 jobs:
   fetch-and-commit-data:
