weekly on Tuesdays

--- a/.github/workflows/saskatoonsymphony-events.yml
+++ b/.github/workflows/saskatoonsymphony-events.yml
@@ -3,7 +3,7 @@ name: Fetch Saskatoon Symphony Events
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 1 */6 *'
+    - cron: '0 2 * * 2'
       
 jobs:
   fetch-and-commit-data:
