--- a/.github/workflows/kiac-events.yml
+++ b/.github/workflows/kiac-events.yml
@@ -6,22 +6,14 @@ on:
     - cron: '0 0 1 * *'
       
 jobs:
-  call-workflow-to-fetch-data:
-    uses: ./.github/workflows/fetch-data.yml
+  call-workflow-to-fetch-and-push-data:
+    uses: ./.github/workflows/fetch-and-push-to-artsdata.yml
     with:
         page_url: "https://kiac.ca/calendar-of-events/"
         entity_identifier: "div.tribe-events-pro-photo__event-featured-image-wrapper a"
         file_name: "kiac-events.jsonld"
         is_paginated: "false"
         headless: "false"
-
-  artsdata-push:
-    runs-on: ubuntu-latest
-    needs: call-workflow-to-fetch-data
-    steps:
-      - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v1.1.0
-        with:
-          artifact: kiac-ca
-          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          downloadUrl: https://raw.githubusercontent.com/culturecreates/artsdata-orion/${{ needs.call-workflow-to-fetch-data.outputs.commit-hash }}/output/kiac-events.jsonld
+        artifact: "kiac-ca"
+    secrets:
+      PUBLISHER_URI_GREGORY: ${{ secrets.PUBLISHER_URI_GREGORY }}
