--- a/.github/workflows/aramusique-events.yml
+++ b/.github/workflows/aramusique-events.yml
@@ -6,23 +6,14 @@ on:
  #   - cron: '0 0 1 * *'
  # Target website updated. Need to update index page parameters.     
 jobs:
-  call-workflow-to-fetch-data:
-    uses: ./.github/workflows/fetch-data.yml
+  call-workflow-to-fetch-and-push-data:
+    uses: ./.github/workflows/fetch-and-push-to-artsdata.yml
     with:
         page_url: "https://www.aramusique.org/evenements/liste/page/"
         entity_identifier: "h3.tribe-events-calendar-list__event-title.tribe-common-h6.tribe-common-h4--min-medium a"
         file_name: "aramusique-events.jsonld"
         is_paginated: "true"
         headless: "false"
-
-  artsdata-push:
-    runs-on: ubuntu-latest
-    needs: call-workflow-to-fetch-data
-    steps:
-      - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v1.1.0
-        with:
-          artifact: aramusique-org
-          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          downloadUrl: https://raw.githubusercontent.com/culturecreates/artsdata-orion/${{ needs.call-workflow-to-fetch-data.outputs.commit-hash }}/output/aramusique-events.jsonld
-
+        artifact: "aramusique-org"
+    secrets:
+        PUBLISHER_URI_GREGORY: ${{ secrets.PUBLISHER_URI_GREGORY }}
