--- a/.github/workflows/imperialtheatre-events.yml
+++ b/.github/workflows/imperialtheatre-events.yml
@@ -6,22 +6,14 @@ on:
     - cron: '0 3 * * 1'
       
 jobs:
-  call-workflow-to-fetch-data:
-    uses: ./.github/workflows/fetch-data.yml
+  call-workflow-to-fetch-and-push-data:
+    uses: ./.github/workflows/fetch-and-push-to-artsdata.yml
     with:
         page_url: "https://imperialtheatre.ca/events/?_paged="
         entity_identifier: "div.fl-post-image a"
         file_name: "imperialtheatre-events.jsonld"
         is_paginated: "true"
         headless: "false"
-      
-  artsdata-push:
-    runs-on: ubuntu-latest
-    needs: call-workflow-to-fetch-data
-    steps:
-      - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v1.1.0
-        with:
-          artifact: imperialtheatre-ca
-          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          downloadUrl: https://raw.githubusercontent.com/culturecreates/artsdata-orion/${{ needs.call-workflow-to-fetch-data.outputs.commit-hash }}/output/imperialtheatre-events.jsonld
+        artifact: "imperialtheatre-ca"
+    secrets:
+        PUBLISHER_URI_GREGORY: ${{ secrets.PUBLISHER_URI_GREGORY }}
