--- a/.github/workflows/osac-events.yml
+++ b/.github/workflows/osac-events.yml
@@ -4,22 +4,14 @@ on:
   workflow_dispatch:
       
 jobs:
-  call-workflow-to-fetch-data:
-    uses: ./.github/workflows/fetch-data.yml
+  call-workflow-to-fetch-and-push-data:
+    uses: ./.github/workflows/fetch-and-push-to-artsdata.yml
     with:
         page_url: "https://www.osac.ca/performing-arts/performances?run=patours"
         entity_identifier: "td a"
         file_name: "osac-events.jsonld"
         is_paginated: "false"
         headless: "false"  
-
-  artsdata-push:
-    runs-on: ubuntu-latest
-    needs: call-workflow-to-fetch-data
-    steps:
-      - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v1.1.0
-        with:
-          artifact: osac-ca
-          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          downloadUrl: https://raw.githubusercontent.com/culturecreates/artsdata-orion/${{ needs.call-workflow-to-fetch-data.outputs.commit-hash }}/output/osac-events.jsonld
+        artifact: "osac-ca"
+    secrets:
+        PUBLISHER_URI_GREGORY: ${{ secrets.PUBLISHER_URI_GREGORY }}
