--- a/.github/workflows/saskatoonsymphony-events.yml
+++ b/.github/workflows/saskatoonsymphony-events.yml
@@ -6,23 +6,14 @@ on:
     - cron: '0 2 * * 2'
       
 jobs:
-  call-workflow-to-fetch-data:
-    uses: ./.github/workflows/fetch-data.yml
+  call-workflow-to-fetch-and-push-data:
+    uses: ./.github/workflows/fetch-and-push-to-artsdata.yml
     with:
         page_url: "https://saskatoonsymphony.org/season/"
         entity_identifier: "div.vem-custom-calendar-image a"
         file_name: "saskatoonsymphony-events.jsonld"
         is_paginated: "false"
         headless: "false"  
-
-  artsdata-push:
-    runs-on: ubuntu-latest
-    needs: call-workflow-to-fetch-data
-    steps:
-      - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v1.1.0
-        with:
-          artifact: saskatoonsymphony-org
-          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          downloadUrl: https://raw.githubusercontent.com/culturecreates/artsdata-orion/${{ needs.call-workflow-to-fetch-data.outputs.commit-hash }}/output/saskatoonsymphony-events.jsonld
-
+        artifact: "saskatoonsymphony-org"
+    secrets:
+        PUBLISHER_URI_GREGORY: ${{ secrets.PUBLISHER_URI_GREGORY }}
