--- a/.github/workflows/spectart-com-events.yml
+++ b/.github/workflows/spectart-com-events.yml
@@ -5,23 +5,14 @@ on:
   schedule:
     - cron: '0 6 * * 3'
 jobs:
-  call-workflow-to-fetch-data:
-    uses: ./.github/workflows/fetch-data.yml
+  call-workflow-to-fetch-and-push-data:
+    uses: ./.github/workflows/fetch-and-push-to-artsdata.yml
     with:
         page_url: "https://spectart.com/programmation/"
         entity_identifier: "a.thumbnail"
         file_name: "spectart-com-events.jsonld"
         is_paginated: "false"
         headless: "false"    
-
-  artsdata-push:
-    runs-on: ubuntu-latest
-    needs: call-workflow-to-fetch-data
-    steps:
-      - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v1.1.0
-        with:
-          artifact: spectart-com-events
-          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          downloadUrl: https://raw.githubusercontent.com/culturecreates/artsdata-orion/${{ needs.call-workflow-to-fetch-data.outputs.commit-hash }}/output/spectart-com-events.jsonld
-
+        artifact: "spectart-com-events"
+    secrets:
+        PUBLISHER_URI_GREGORY: ${{ secrets.PUBLISHER_URI_GREGORY }}
