--- a/.github/workflows/totem-events.yml
+++ b/.github/workflows/totem-events.yml
@@ -6,22 +6,14 @@ on:
     - cron: '0 0 1 */6 *'
       
 jobs:
-  call-workflow-to-fetch-data:
-    uses: ./.github/workflows/fetch-data.yml
+  call-workflow-to-fetch-and-push-data:
+    uses: ./.github/workflows/fetch-and-push-to-artsdata.yml
     with:
         page_url: "https://totemcontemporain.com/fr/calendrier"
         entity_identifier: "h3.picto.padding-bottom-12 a"
         file_name: "totem-events.jsonld"
         is_paginated: "false"
-        headless: "false"   
-        
-  artsdata-push:
-    runs-on: ubuntu-latest
-    needs: call-workflow-to-fetch-data
-    steps:
-      - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v1.1.0
-        with:
-          artifact: totemcontemporain-com
-          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          downloadUrl: https://raw.githubusercontent.com/culturecreates/artsdata-orion/${{ needs.call-workflow-to-fetch-data.outputs.commit-hash }}/output/totem-events.jsonld
+        headless: "false"
+        artifact: "totemcontemporain-com"
+    secrets:
+        PUBLISHER_URI_GREGORY: ${{ secrets.PUBLISHER_URI_GREGORY }}   
