--- a/.github/workflows/agoradanse-events.yml
+++ b/.github/workflows/agoradanse-events.yml
@@ -6,14 +6,16 @@ on:
     - cron: '0 0 1 * *'
       
 jobs:
-  call-workflow-to-fetch-and-push-data:
-    uses: ./.github/workflows/fetch-and-push-to-artsdata.yml
-    with:
-        page_url: "https://agoradanse.com/evenement/"
-        entity_identifier: "div.x-container.max a"
-        file_name: "agoradanse-events.jsonld"
-        is_paginated: "false"
-        headless: "false"
-        artifact: "agoradanse-com"
-    secrets:
-      PUBLISHER_URI_GREGORY: ${{ secrets.PUBLISHER_URI_GREGORY }}
+  artsdata-fetch-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Action setup
+        uses: culturecreates/artsdata-pipeline-action@v2.0.0
+        with:
+          mode: "fetch-push"
+          artifact: "agoradanse-com"
+          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
+          downloadFile: "agoradanse-events.jsonld"
+          page-url: "https://agoradanse.com/evenement/"
+          entity-identifier: "div.x-container.max a"
+          token: "${{ secrets.GITHUB_TOKEN }}"
