--- a/.github/workflows/kiac-events.yml
+++ b/.github/workflows/kiac-events.yml
@@ -6,14 +6,16 @@ on:
     - cron: '0 0 1 * *'
       
 jobs:
-  call-workflow-to-fetch-and-push-data:
-    uses: ./.github/workflows/fetch-and-push-to-artsdata.yml
-    with:
-        page_url: "https://kiac.ca/calendar-of-events/"
-        entity_identifier: "div.tribe-events-pro-photo__event-featured-image-wrapper a"
-        file_name: "kiac-events.jsonld"
-        is_paginated: "false"
-        headless: "false"
-        artifact: "kiac-ca"
-    secrets:
-      PUBLISHER_URI_GREGORY: ${{ secrets.PUBLISHER_URI_GREGORY }}
+  artsdata-fetch-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Action setup
+        uses: culturecreates/artsdata-pipeline-action@v2.0.0
+        with:
+          mode: "fetch-push"
+          artifact: "kiac-ca"
+          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
+          downloadFile: "kiac-events.jsonld"
+          page-url: "https://kiac.ca/calendar-of-events/"
+          entity-identifier: "div.tribe-events-pro-photo__event-featured-image-wrapper a"
+          token: "${{ secrets.GITHUB_TOKEN }}"
