Updating workflows to use reusable workflow

--- a/.github/workflows/kingstongrand-events.yml
+++ b/.github/workflows/kingstongrand-events.yml
@@ -5,14 +5,16 @@ on:
   schedule:
     - cron: '0 14 * * 1'    
 jobs:
-  call-workflow-to-fetch-and-push-data:
-    uses: ./.github/workflows/fetch-and-push-to-artsdata.yml
-    with:
-        page_url: "https://www.kingstongrand.ca/events"
-        entity_identifier: "div.image a"
-        file_name: "kingston-grand-events.jsonld"
-        is_paginated: "false"
-        headless: "false"
-        artifact: "kingstongrand-ca"
-    secrets:
-        PUBLISHER_URI_GREGORY: ${{ secrets.PUBLISHER_URI_GREGORY }}
+  artsdata-fetch-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Action setup
+        uses: culturecreates/artsdata-pipeline-action@v2.0.0
+        with:
+          mode: "fetch-push"
+          artifact: "kingstongrand-ca"
+          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
+          downloadFile: "kingston-grand-events.jsonld"
+          page-url: "https://www.kingstongrand.ca/events"
+          entity-identifier: "div.image a"
+          token: "${{ secrets.GITHUB_TOKEN }}"
