--- a/.github/workflows/levivier-events.yml
+++ b/.github/workflows/levivier-events.yml
@@ -6,14 +6,16 @@ on:
     - cron: '0 0 1 */6 *'
       
 jobs:
-  call-workflow-to-fetch-and-push-data:
-    uses: ./.github/workflows/fetch-and-push-to-artsdata.yml
-    with:
-        page_url: "https://levivier.ca/fr"
-        entity_identifier: "div.cont-even a"
-        file_name: "levivier-events.jsonld"
-        is_paginated: "false"
-        headless: "false"  
-        artifact: "levivier-ca"
-    secrets:
-        PUBLISHER_URI_GREGORY: ${{ secrets.PUBLISHER_URI_GREGORY }}
+  artsdata-fetch-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Action setup
+        uses: culturecreates/artsdata-pipeline-action@v2.0.0
+        with:
+          mode: "fetch-push"
+          artifact: "levivier-ca"
+          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
+          downloadFile: "levivier-events.jsonld"
+          page-url: "https://levivier.ca/fr"
+          entity-identifier: "div.cont-even a"
+          token: "${{ secrets.GITHUB_TOKEN }}"
