--- a/.github/workflows/spectart-com-events.yml
+++ b/.github/workflows/spectart-com-events.yml
@@ -5,14 +5,16 @@ on:
   schedule:
     - cron: '0 6 * * 3'
 jobs:
-  call-workflow-to-fetch-and-push-data:
-    uses: ./.github/workflows/fetch-and-push-to-artsdata.yml
-    with:
-        page_url: "https://spectart.com/programmation/"
-        entity_identifier: "a.thumbnail"
-        file_name: "spectart-com-events.jsonld"
-        is_paginated: "false"
-        headless: "false"    
-        artifact: "spectart-com-events"
-    secrets:
-        PUBLISHER_URI_GREGORY: ${{ secrets.PUBLISHER_URI_GREGORY }}
+  artsdata-fetch-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Action setup
+        uses: culturecreates/artsdata-pipeline-action@v2.0.0
+        with:
+          mode: "fetch-push"
+          artifact: "spectart-com-events"
+          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
+          downloadFile: "spectart-com-events.jsonld"
+          page-url: "https://spectart.com/programmation/"
+          entity-identifier: "a.thumbnail"
+          token: "${{ secrets.GITHUB_TOKEN }}"
