--- a/.github/workflows/yardbirdsuite-events.yml
+++ b/.github/workflows/yardbirdsuite-events.yml
@@ -6,14 +6,17 @@ on:
     - cron: '0 0 1 */6 *'
       
 jobs:
-  call-workflow-to-fetch-and-push-data:
-    uses: ./.github/workflows/fetch-and-push-to-artsdata.yml
-    with:
-        page_url: "https://yardbirdsuite.com/events/page/"
-        entity_identifier: "a.h-100.w-100.position-absolute.t-0.l-0.z-999"
-        file_name: "yardbirdsuite-events.jsonld"
-        is_paginated: "true"
-        headless: "false"  
-        artifact: "yardbirdsuite-com"
-    secrets:
-        PUBLISHER_URI_GREGORY: ${{ secrets.PUBLISHER_URI_GREGORY }}
+  artsdata-fetch-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Action setup
+        uses: culturecreates/artsdata-pipeline-action@v2.0.0
+        with:
+          mode: "fetch-push"
+          artifact: "yardbirdsuite-com"
+          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
+          downloadFile: "yardbirdsuite-events.jsonld"
+          page-url: "https://yardbirdsuite.com/events/page/"
+          entity-identifier: "a.h-100.w-100.position-absolute.t-0.l-0.z-999"
+          is-paginated: "true"
+          token: "${{ secrets.GITHUB_TOKEN }}"
