--- a/.github/workflows/spec-qc-ca-events.yml
+++ b/.github/workflows/spec-qc-ca-events.yml
@@ -5,14 +5,16 @@ on:
   schedule:
     - cron: '0 7 * * 3'
 jobs:
-  call-workflow-to-fetch-and-push-data:
-    uses: ./.github/workflows/fetch-and-push-to-artsdata.yml
-    with:
-        page_url: "https://spec.qc.ca/programmation"
-        entity_identifier: ".headlining__component"
-        file_name: "spec-qc-ca-events.jsonld"
-        is_paginated: "false"
-        headless: "false"  
-        artifact: "spec-qc-ca-events"
-    secrets:
-        PUBLISHER_URI_GREGORY: ${{ secrets.PUBLISHER_URI_GREGORY }}
+  artsdata-fetch-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Action setup
+        uses: culturecreates/artsdata-pipeline-action@v2.0.0
+        with:
+          mode: "fetch-push"
+          artifact: "spec-qc-ca-events"
+          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
+          downloadFile: "spec-qc-ca-events.jsonld"
+          page-url: "https://spec.qc.ca/programmation"
+          entity-identifier: ".headlining__component"
+          token: "${{ secrets.GITHUB_TOKEN }}"
