Updated workflow for capitolnb

--- a/.github/workflows/capitolnb-events.yml
+++ b/.github/workflows/capitolnb-events.yml
@@ -15,6 +15,7 @@ jobs:
           page-url: "https://capitol.nb.ca/en/tickets-events?filter_45=2024-"
           entity-identifier: "div.fc-item-block-standard-wrapper.odd a, div.fc-item-block-standard-wrapper.even a"
           is-paginated: "10"
+          headless: "true"
           token: "${{ secrets.GITHUB_TOKEN }}"
 
   replace-location-name:
