--- a/.github/workflows/aramusique-events.yml
+++ b/.github/workflows/aramusique-events.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@${{vars.ARTSDATA_PIPELINE_ACTION_VERSION}}
+        uses: culturecreates/artsdata-pipeline-action@v2.0.2
         with:
           mode: "fetch-push"
           artifact: "aramusique-org"
