Debuggibg capitolnb workflow

--- a/.github/workflows/capitolnb-events.yml
+++ b/.github/workflows/capitolnb-events.yml
@@ -18,6 +18,7 @@ jobs:
           downloadFile: "capitolnb-events.jsonld"
           page-url: "https://capitol.nb.ca/en/tickets-events?filter_45=2024-"
           entity-identifier: "div.fc-item-block-standard-wrapper.odd a, div.fc-item-block-standard-wrapper.even a"
-          is-paginated: "10"
+          is-paginated: "0"
           headless: "true"
+          offset: "12"
           token: "${{ secrets.GITHUB_TOKEN }}"
